3.9.0.0/TRANSLATION_STATUS.md
# Translation Status (3.9.0.0)

> 🌐 **English** | [繁體中文](TRANSLATION_STATUS.zh-TW.md)

Rebuilt in place: existing translations for this version are preserved, and any strings still marked `untranslated` remain so (they fall back to English until translated).

- Total strings (both projects): 492
- Generated: 2026-07-21 23:37:18 +08:00

Jump to: [es-ES](#es-es) · [ru-RU](#ru-ru) · [tr-TR](#tr-tr)

## Overall (both projects)

| Language | Translated | Pending | Complete |
|----------|-----------:|--------:|---------:|
| es-ES | 444 | 48 | 90% |
| ru-RU | 492 | 0 | 100% |
| tr-TR | 465 | 27 | 94% |

## Project: OmniConsole

Strings: 470

| Language | Translated | Pending | Complete |
|----------|-----------:|--------:|---------:|
| es-ES | 428 | 42 | 91% |
| ru-RU | 470 | 0 | 100% |
| tr-TR | 444 | 26 | 94% |

## Project: OmniConsole.PhantomLink

Strings: 22

| Language | Translated | Pending | Complete |
|----------|-----------:|--------:|---------:|
| es-ES | 16 | 6 | 72% |
| ru-RU | 22 | 0 | 100% |
| tr-TR | 21 | 1 | 95% |

## Untranslated keys

### es-ES

**OmniConsole**

New keys (20):
- `CommunityPlatformsButton.Content`
- `CommunityPlatforms_Title`
- `CommunityPlatforms_Loading`
- `CommunityPlatforms_Error`
- `CommunityPlatforms_Empty`
- `CommunityPlatforms_SchemaTooNew`
- `CommunityPlatforms_SearchPlaceholder`
- `CommunityPlatforms_SortNewest`
- `CommunityPlatforms_SortOldest`
- `CommunityPlatforms_SelectHint`
- `CommunityPlatforms_NoResults`
- `CommunityPlatforms_Submitter`
- `CommunityPlatforms_SubmitterDate`
- `CommunityPlatforms_NotDetected`
- `CommunityPlatforms_Action_Add`
- `CommunityPlatforms_Result_Added`
- `Import_Error_PackageNotInstalled`
- `CommunityPlatforms_CheckingUpdates`
- `CommunityPlatforms_OfflineNotice`
- `Import_Error_ExecutableNotFound`

Changed (re-translate) (22):
- `AdvancedSection_Steam.Text`
- `AdvancedSection_Nekomata.Text`
- `PhantomKeySetting_Title.Text`
- `PhantomKeySetting_Description.Text`
- `GamepadMappingModeSetting_Title.Text`
- `GamepadMappingModeSetting_Description.Text`
- `GamepadMappingModeSetting_Note.Text`
- `GamepadMappingModeSetting_BuiltInMappingNote.Text`
- `ControllerLayoutPresetSetting_Title.Text`
- `ControllerLayoutPresetSetting_Description.Text`
- `ControllerLayoutPresetItem_OmniNav`
- `ControllerLayoutPresetItem_Classic`
- `GamepadProfile_BlockNativeGamepadInput_Note.Text`
- `GamepadProfile_MappingServicePriority_Title.Text`
- `GamepadProfile_MappingServicePriority_Description.Text`
- `GamepadProcessPriority_Standard`
- `GamepadProcessPriority_Performance`
- `GamepadRepeatToggle.Content`
- `GamepadMappingClearAllConfirmBody`
- `GamepadMappingEmptyConfirmBody`
- `GamepadMappingEmptyRemoveBody`
- `ManageLanguages_OfflineNotice`

**OmniConsole.PhantomLink**

Changed (re-translate) (6):
- `Widget_GamepadMappingMode_Title.Text`
- `Widget_Mode_On.Content`
- `Widget_ControllerLayoutPreset_Title.Text`
- `Widget_ControllerLayoutPreset_OmniNav.Content`
- `Widget_ControllerLayoutPreset_Classic.Content`
- `Widget_BuiltInMappingNote.Text`

### ru-RU

_All translated._

### tr-TR

**OmniConsole**

New keys (20):
- `CommunityPlatformsButton.Content`
- `CommunityPlatforms_Title`
- `CommunityPlatforms_Loading`
- `CommunityPlatforms_Error`
- `CommunityPlatforms_Empty`
- `CommunityPlatforms_SchemaTooNew`
- `CommunityPlatforms_SearchPlaceholder`
- `CommunityPlatforms_SortNewest`
- `CommunityPlatforms_SortOldest`
- `CommunityPlatforms_SelectHint`
- `CommunityPlatforms_NoResults`
- `CommunityPlatforms_Submitter`
- `CommunityPlatforms_SubmitterDate`
- `CommunityPlatforms_NotDetected`
- `CommunityPlatforms_Action_Add`
- `CommunityPlatforms_Result_Added`
- `Import_Error_PackageNotInstalled`
- `CommunityPlatforms_CheckingUpdates`
- `CommunityPlatforms_OfflineNotice`
- `Import_Error_ExecutableNotFound`

Changed (re-translate) (6):
- `GamepadMappingModeSetting_Note.Text`
- `GamepadMappingModeSetting_BuiltInMappingNote.Text`
- `GamepadMappingClearAllConfirmBody`
- `GamepadMappingEmptyConfirmBody`
- `GamepadMappingEmptyRemoveBody`
- `ManageLanguages_OfflineNotice`

**OmniConsole.PhantomLink**

Changed (re-translate) (1):
- `Widget_BuiltInMappingNote.Text`
