4.1.0.0/TRANSLATION_STATUS.md
# Translation Status (4.1.0.0)

> 🌐 **English** | [繁體中文](TRANSLATION_STATUS.zh-TW.md)

Auto-migrated from 4.0.1.0: unchanged English keys reuse the previous translation; new or changed keys are marked `untranslated` (fall back to English until a translator fills them in).

- Total strings (both projects): 577
- Generated: 2026-08-02 23:22:11 +08:00

Jump to: [es-ES](#es-es) · [ru-RU](#ru-ru) · [tr-TR](#tr-tr)

## Overall (both projects)

| Language | Translated | Pending | Complete |
|----------|-----------:|--------:|---------:|
| es-ES | 443 | 134 | 76% |
| ru-RU | 490 | 87 | 84% |
| tr-TR | 464 | 113 | 80% |

## Project: OmniConsole

Strings: 554

| Language | Translated | Pending | Complete |
|----------|-----------:|--------:|---------:|
| es-ES | 428 | 126 | 77% |
| ru-RU | 469 | 85 | 84% |
| tr-TR | 444 | 110 | 80% |

## Project: OmniConsole.PhantomLink

Strings: 23

| Language | Translated | Pending | Complete |
|----------|-----------:|--------:|---------:|
| es-ES | 15 | 8 | 65% |
| ru-RU | 21 | 2 | 91% |
| tr-TR | 20 | 3 | 86% |

## Untranslated keys

### es-ES

**OmniConsole**

New keys (84):
- `ControllerLayoutPresetItem_Custom`
- `ControllerLayoutPresetEditButton.Content`
- `Label_ElevatedAppSupportService.Text`
- `ElevatedServiceHealth_Running`
- `ElevatedServiceHealth_NotRunning`
- `Label_PhantomSigil.Text`
- `GamepadMappingResetCustomButton.Content`
- `GamepadMappingResetCustomConfirmTitle`
- `GamepadMappingResetCustomConfirmBody`
- `GamepadMappingResetCustomConfirmYes`
- `GamepadMappingCustomLayoutTitle`
- `GamepadMappingCustomLayoutSubtitle`
- `GamepadMappingCustomLayoutEmptyTitle`
- `GamepadMappingCustomLayoutEmptyBody`
- `GamepadMappingCustomLayoutEmptyYes`
- `GamepadAction_GamepadKeyboard`
- `GamepadAction_OnScreenKeyboard`
- `Nav_Pro.Content`
- `ProTitle`
- `ProDescription.Text`
- `ProSection_Unlock.Text`
- `ProSection_Status.Text`
- `ProSection_Manage.Text`
- `ProSection_Features.Text`
- `ProUnlockCard_Title.Text`
- `ProUnlockCard_Description.Text`
- `ProUnlockCard_Note.Text`
- `ProSponsorButton.Content`
- `ProEnterKeyButton.Content`
- `ProStatusCard_Title.Text`
- `ProStatusLabel_LicensedTo.Text`
- `ProStatusLabel_Serial.Text`
- `ProStatusLabel_Issued.Text`
- `ProManageCard_Title.Text`
- `ProManageCard_Description.Text`
- `ProRemoveButton.Content`
- `ProFeaturesCard_Title.Text`
- `ProLicenseDialog_Title`
- `ProLicenseDialog_Hint`
- `ProLicenseDialog_Placeholder`
- `ProLicenseDialog_ImportFile`
- `ProLicenseDialog_Primary`
- `ProLicenseDialog_Cancel`
- `ProLicense_FileFilter`
- `ProRemoveDialog_Title`
- `ProRemoveDialog_Body`
- `ProRemoveDialog_Confirm`
- `ProRemoveDialog_Cancel`
- `ProLicense_Success`
- `ProLicense_Error_Empty`
- `ProLicense_Error_Malformed`
- `ProLicense_Error_UnknownFormat`
- `ProLicense_Error_UnknownKeyId`
- `ProLicense_Error_UnknownProduct`
- `ProLicense_Error_BadSignature`
- `ProLicense_Error_Revoked`
- `ProLicense_Error_VersionExceeded`
- `ProLicense_Error_FileUnreadable`
- `ProLicense_Error_FileNotLicense`
- `ProLicense_Error_AlreadyImported`
- `ProLicense_Error_UnknownEntitlement`
- `ProAddLicenseButton.Content`
- `ProEntitlement_Pro`
- `ProEntitlement_Owned`
- `ProEntitlement_NotOwned`
- `ProEntitlementRemove`
- `ProRemoveDialog_BodyOne`
- `ProRemoveDialog_BodyPro`
- `ProLicense_Error_RequiresPro`
- `ProManageCard_Note.Text`
- `ElevatedAppSupportSetting_Title.Text`
- `ElevatedAppSupportSetting_Description.Text`
- `ElevatedAppSupport_Install`
- `ElevatedAppSupport_Remove`
- `ElevatedAppSupportRemoveDialog_Title`
- `ElevatedAppSupportRemoveDialog_Body`
- `ElevatedAppSupportRemoveDialog_Confirm`
- `ElevatedAppSupportRemoveDialog_Cancel`
- `ElevatedServiceUpdateDialog_Title`
- `ElevatedServiceUpdateDialog_Content`
- `ElevatedServiceUpdateDialog_Update`
- `ElevatedAppSupportUnavailableDialog_Title`
- `ElevatedAppSupportUnavailableDialog_Body`
- `ElevatedAppSupportUnavailableDialog_Close`

Changed (re-translate) (42):
- `AdvancedSection_Steam.Text`
- `AdvancedSection_Nekomata.Text`
- `PhantomKeySetting_Title.Text`
- `PhantomKeySetting_Description.Text`
- `GamepadMappingModeSetting_Title.Text`
- `GamepadMappingModeSetting_Description.Text`
- `GamepadMappingModeSetting_Note.Text`
- `GamepadMappingModeSetting_BuiltInMappingNote.Text`
- `ControllerLayoutPresetSetting_Title.Text`
- `ControllerLayoutPresetSetting_Description.Text`
- `ControllerLayoutPresetItem_OmniNav`
- `ControllerLayoutPresetItem_Classic`
- `GamepadProfile_BlockNativeGamepadInput_Note.Text`
- `GamepadProfile_MappingServicePriority_Title.Text`
- `GamepadProfile_MappingServicePriority_Description.Text`
- `GamepadProcessPriority_Standard`
- `GamepadProcessPriority_Performance`
- `GamepadRepeatToggle.Content`
- `GamepadMappingClearAllConfirmBody`
- `GamepadMappingEmptyConfirmBody`
- `GamepadMappingEmptyRemoveBody`
- `ManageLanguages_OfflineNotice`
- `CommunityPlatformsButton.Content`
- `CommunityPlatforms_Title`
- `CommunityPlatforms_Loading`
- `CommunityPlatforms_Error`
- `CommunityPlatforms_Empty`
- `CommunityPlatforms_SchemaTooNew`
- `CommunityPlatforms_SearchPlaceholder`
- `CommunityPlatforms_SortNewest`
- `CommunityPlatforms_SortOldest`
- `CommunityPlatforms_SelectHint`
- `CommunityPlatforms_NoResults`
- `CommunityPlatforms_Submitter`
- `CommunityPlatforms_SubmitterDate`
- `CommunityPlatforms_NotDetected`
- `CommunityPlatforms_Action_Add`
- `CommunityPlatforms_Result_Added`
- `Import_Error_PackageNotInstalled`
- `CommunityPlatforms_CheckingUpdates`
- `CommunityPlatforms_OfflineNotice`
- `Import_Error_ExecutableNotFound`

**OmniConsole.PhantomLink**

New keys (1):
- `Widget_ControllerLayoutPreset_Custom.Content`

Changed (re-translate) (7):
- `Widget_GamepadMappingMode_Title.Text`
- `Widget_Mode_On.Content`
- `Widget_ControllerLayoutPreset_Title.Text`
- `Widget_ControllerLayoutPreset_OmniNav.Content`
- `Widget_ControllerLayoutPreset_Classic.Content`
- `Widget_BuiltInMappingNote.Text`
- `Widget_CustomizeApp_ElevatedNote.Text`

### ru-RU

**OmniConsole**

New keys (84):
- `ControllerLayoutPresetItem_Custom`
- `ControllerLayoutPresetEditButton.Content`
- `Label_ElevatedAppSupportService.Text`
- `ElevatedServiceHealth_Running`
- `ElevatedServiceHealth_NotRunning`
- `Label_PhantomSigil.Text`
- `GamepadMappingResetCustomButton.Content`
- `GamepadMappingResetCustomConfirmTitle`
- `GamepadMappingResetCustomConfirmBody`
- `GamepadMappingResetCustomConfirmYes`
- `GamepadMappingCustomLayoutTitle`
- `GamepadMappingCustomLayoutSubtitle`
- `GamepadMappingCustomLayoutEmptyTitle`
- `GamepadMappingCustomLayoutEmptyBody`
- `GamepadMappingCustomLayoutEmptyYes`
- `GamepadAction_GamepadKeyboard`
- `GamepadAction_OnScreenKeyboard`
- `Nav_Pro.Content`
- `ProTitle`
- `ProDescription.Text`
- `ProSection_Unlock.Text`
- `ProSection_Status.Text`
- `ProSection_Manage.Text`
- `ProSection_Features.Text`
- `ProUnlockCard_Title.Text`
- `ProUnlockCard_Description.Text`
- `ProUnlockCard_Note.Text`
- `ProSponsorButton.Content`
- `ProEnterKeyButton.Content`
- `ProStatusCard_Title.Text`
- `ProStatusLabel_LicensedTo.Text`
- `ProStatusLabel_Serial.Text`
- `ProStatusLabel_Issued.Text`
- `ProManageCard_Title.Text`
- `ProManageCard_Description.Text`
- `ProRemoveButton.Content`
- `ProFeaturesCard_Title.Text`
- `ProLicenseDialog_Title`
- `ProLicenseDialog_Hint`
- `ProLicenseDialog_Placeholder`
- `ProLicenseDialog_ImportFile`
- `ProLicenseDialog_Primary`
- `ProLicenseDialog_Cancel`
- `ProLicense_FileFilter`
- `ProRemoveDialog_Title`
- `ProRemoveDialog_Body`
- `ProRemoveDialog_Confirm`
- `ProRemoveDialog_Cancel`
- `ProLicense_Success`
- `ProLicense_Error_Empty`
- `ProLicense_Error_Malformed`
- `ProLicense_Error_UnknownFormat`
- `ProLicense_Error_UnknownKeyId`
- `ProLicense_Error_UnknownProduct`
- `ProLicense_Error_BadSignature`
- `ProLicense_Error_Revoked`
- `ProLicense_Error_VersionExceeded`
- `ProLicense_Error_FileUnreadable`
- `ProLicense_Error_FileNotLicense`
- `ProLicense_Error_AlreadyImported`
- `ProLicense_Error_UnknownEntitlement`
- `ProAddLicenseButton.Content`
- `ProEntitlement_Pro`
- `ProEntitlement_Owned`
- `ProEntitlement_NotOwned`
- `ProEntitlementRemove`
- `ProRemoveDialog_BodyOne`
- `ProRemoveDialog_BodyPro`
- `ProLicense_Error_RequiresPro`
- `ProManageCard_Note.Text`
- `ElevatedAppSupportSetting_Title.Text`
- `ElevatedAppSupportSetting_Description.Text`
- `ElevatedAppSupport_Install`
- `ElevatedAppSupport_Remove`
- `ElevatedAppSupportRemoveDialog_Title`
- `ElevatedAppSupportRemoveDialog_Body`
- `ElevatedAppSupportRemoveDialog_Confirm`
- `ElevatedAppSupportRemoveDialog_Cancel`
- `ElevatedServiceUpdateDialog_Title`
- `ElevatedServiceUpdateDialog_Content`
- `ElevatedServiceUpdateDialog_Update`
- `ElevatedAppSupportUnavailableDialog_Title`
- `ElevatedAppSupportUnavailableDialog_Body`
- `ElevatedAppSupportUnavailableDialog_Close`

Changed (re-translate) (1):
- `GamepadMappingModeSetting_Note.Text`

**OmniConsole.PhantomLink**

New keys (1):
- `Widget_ControllerLayoutPreset_Custom.Content`

Changed (re-translate) (1):
- `Widget_CustomizeApp_ElevatedNote.Text`

### tr-TR

**OmniConsole**

New keys (84):
- `ControllerLayoutPresetItem_Custom`
- `ControllerLayoutPresetEditButton.Content`
- `Label_ElevatedAppSupportService.Text`
- `ElevatedServiceHealth_Running`
- `ElevatedServiceHealth_NotRunning`
- `Label_PhantomSigil.Text`
- `GamepadMappingResetCustomButton.Content`
- `GamepadMappingResetCustomConfirmTitle`
- `GamepadMappingResetCustomConfirmBody`
- `GamepadMappingResetCustomConfirmYes`
- `GamepadMappingCustomLayoutTitle`
- `GamepadMappingCustomLayoutSubtitle`
- `GamepadMappingCustomLayoutEmptyTitle`
- `GamepadMappingCustomLayoutEmptyBody`
- `GamepadMappingCustomLayoutEmptyYes`
- `GamepadAction_GamepadKeyboard`
- `GamepadAction_OnScreenKeyboard`
- `Nav_Pro.Content`
- `ProTitle`
- `ProDescription.Text`
- `ProSection_Unlock.Text`
- `ProSection_Status.Text`
- `ProSection_Manage.Text`
- `ProSection_Features.Text`
- `ProUnlockCard_Title.Text`
- `ProUnlockCard_Description.Text`
- `ProUnlockCard_Note.Text`
- `ProSponsorButton.Content`
- `ProEnterKeyButton.Content`
- `ProStatusCard_Title.Text`
- `ProStatusLabel_LicensedTo.Text`
- `ProStatusLabel_Serial.Text`
- `ProStatusLabel_Issued.Text`
- `ProManageCard_Title.Text`
- `ProManageCard_Description.Text`
- `ProRemoveButton.Content`
- `ProFeaturesCard_Title.Text`
- `ProLicenseDialog_Title`
- `ProLicenseDialog_Hint`
- `ProLicenseDialog_Placeholder`
- `ProLicenseDialog_ImportFile`
- `ProLicenseDialog_Primary`
- `ProLicenseDialog_Cancel`
- `ProLicense_FileFilter`
- `ProRemoveDialog_Title`
- `ProRemoveDialog_Body`
- `ProRemoveDialog_Confirm`
- `ProRemoveDialog_Cancel`
- `ProLicense_Success`
- `ProLicense_Error_Empty`
- `ProLicense_Error_Malformed`
- `ProLicense_Error_UnknownFormat`
- `ProLicense_Error_UnknownKeyId`
- `ProLicense_Error_UnknownProduct`
- `ProLicense_Error_BadSignature`
- `ProLicense_Error_Revoked`
- `ProLicense_Error_VersionExceeded`
- `ProLicense_Error_FileUnreadable`
- `ProLicense_Error_FileNotLicense`
- `ProLicense_Error_AlreadyImported`
- `ProLicense_Error_UnknownEntitlement`
- `ProAddLicenseButton.Content`
- `ProEntitlement_Pro`
- `ProEntitlement_Owned`
- `ProEntitlement_NotOwned`
- `ProEntitlementRemove`
- `ProRemoveDialog_BodyOne`
- `ProRemoveDialog_BodyPro`
- `ProLicense_Error_RequiresPro`
- `ProManageCard_Note.Text`
- `ElevatedAppSupportSetting_Title.Text`
- `ElevatedAppSupportSetting_Description.Text`
- `ElevatedAppSupport_Install`
- `ElevatedAppSupport_Remove`
- `ElevatedAppSupportRemoveDialog_Title`
- `ElevatedAppSupportRemoveDialog_Body`
- `ElevatedAppSupportRemoveDialog_Confirm`
- `ElevatedAppSupportRemoveDialog_Cancel`
- `ElevatedServiceUpdateDialog_Title`
- `ElevatedServiceUpdateDialog_Content`
- `ElevatedServiceUpdateDialog_Update`
- `ElevatedAppSupportUnavailableDialog_Title`
- `ElevatedAppSupportUnavailableDialog_Body`
- `ElevatedAppSupportUnavailableDialog_Close`

Changed (re-translate) (26):
- `GamepadMappingModeSetting_Note.Text`
- `GamepadMappingModeSetting_BuiltInMappingNote.Text`
- `GamepadMappingClearAllConfirmBody`
- `GamepadMappingEmptyConfirmBody`
- `GamepadMappingEmptyRemoveBody`
- `ManageLanguages_OfflineNotice`
- `CommunityPlatformsButton.Content`
- `CommunityPlatforms_Title`
- `CommunityPlatforms_Loading`
- `CommunityPlatforms_Error`
- `CommunityPlatforms_Empty`
- `CommunityPlatforms_SchemaTooNew`
- `CommunityPlatforms_SearchPlaceholder`
- `CommunityPlatforms_SortNewest`
- `CommunityPlatforms_SortOldest`
- `CommunityPlatforms_SelectHint`
- `CommunityPlatforms_NoResults`
- `CommunityPlatforms_Submitter`
- `CommunityPlatforms_SubmitterDate`
- `CommunityPlatforms_NotDetected`
- `CommunityPlatforms_Action_Add`
- `CommunityPlatforms_Result_Added`
- `Import_Error_PackageNotInstalled`
- `CommunityPlatforms_CheckingUpdates`
- `CommunityPlatforms_OfflineNotice`
- `Import_Error_ExecutableNotFound`

**OmniConsole.PhantomLink**

New keys (1):
- `Widget_ControllerLayoutPreset_Custom.Content`

Changed (re-translate) (2):
- `Widget_BuiltInMappingNote.Text`
- `Widget_CustomizeApp_ElevatedNote.Text`
